# ComfyUI-CameraCtrl-Wrapper

./: README.md  nodes.py  pyproject.toml  requirements.txt  wf.json
cameractrl/models/: attention_processor.py  unet_blocks.py
cameractrl/pipelines/: pipeline_animation.py
